# crawler-dienmayxanh

./: .env.example  README.md  analyze_html.py  dmx.sqlite  pyproject.toml
configs/: config.yaml  selectors.yaml
dmx/: __init__.py  main.py
dmx/crawler/: robots.py  runner.py  throttler.py
dmx/db/: __init__.py  models.py  session.py
dmx/parsers/: __init__.py  base.py  category.py  home.py  listing.py  product_detail.py
dmx/utils/: __init__.py  config.py  export.py  normalize.py  url.py
html_structure/: ban-ui.html  bep-hong-ngoai.html  bep-tu.html  cay-nuoc-nong-lanh.html  danh-muc-nhom-hang.html  dien-thoai.html  index.html  khuyen-mai-aqua.html  khuyen-mai-campaign.html  khuyen-mai.html  may-lanh.html  may-loc-khong-khi.html  may-loc-nuoc-ro-hydrogen.html  may-loc-nuoc.html  may-loc-nuoc﹖g=loc-dien-giai-ion-kiem.html  may-mai-got-chan.html  tivi.html
html_structure/ban-ui/: ban-ui-hoi-nuoc-cam-tay-aqua-aqs-sh2502r-w-vn-1200w﹖utm_flashsale=1.html
html_structure/bep-hong-ngoai/: bep-hong-ngoai-crystal-p-27﹖utm_flashsale=1.html
html_structure/bep-tu/: bep-tu-doi-lap-am-kangaroo-kgic38d1c﹖utm_flashsale=1.html
html_structure/cay-nuoc-nong-lanh/: cay-nuoc-nong-lanh-kangaroo-kg64a3﹖utm_flashsale=1.html
html_structure/dien-thoai/: realme-note-60x-4gb-64gb﹖utm_flashsale=1.html
html_structure/khuyen-mai/: vay-tieu-dung-qua-ngan-hang-so-cake-khi-mua-sam-1571207.html  vay-tieu-dung-tien-loi-qua-app-ngan-hang-cathay-1570586.html
html_structure/may-lanh/: daikin-inverter-1-hp-atkb25yvmv﹖utm_flashsale=1.html  daikin-inverter-1-hp-atkb25zvmv﹖utm_flashsale=1.html  nagakawa-inverter-15-hp-nis-c12r2t28﹖utm_flashsale=1.html  nagakawa-inverter-2-5-hp-nis-c24r2t28﹖utm_flashsale=1.html
html_structure/may-loc-nuoc/: may-loc-nuoc-ro-kangaroo-kg116i-10-loi.html  may-loc-nuoc-ro-khong-vo-sunhouse-sha8201kv-10-loi﹖utm_flashsale=1.html  may-loc-nuoc-ro-nong-nguoi-karofi-kah-x29-11-loi﹖utm_flashsale=1.html  may-loc-nuoc-ro-nong-nguoi-lanh-hoa-phat-hpn639-12-loi﹖utm_flashsale=1.html  may-loc-nuoc-ro-nong-nguoi-lanh-kangaroo-kg10a12-10-loi﹖utm_flashsale=1.html  may-loc-nuoc-ro-sunhouse-sha76623kl-11-loi﹖utm_flashsale=1.html  ro-mutosi-mp-s126-10-loi﹖utm_flashsale=1.html
html_structure/tivi/: smart-tivi-crystal-uhd-samsung-4k-55-inch-ua55u8550f﹖utm_flashsale=1.html  smart-tivi-hisense-4k-65-inch-65a6q﹖utm_flashsale=1.html  smart-tivi-samsung-4k-55-inch-ua55du8000﹖utm_flashsale=1.html  smart-tivi-toshiba-43-inch-43v31mp﹖utm_flashsale=1.html  tivi-qled-samsung-4k-55-inch-qa55q65d﹖utm_flashsale=1.html  tivi-qled-samsung-4k-75-inch-qa75q65d﹖utm_flashsale=1.html
scripts/: demo.sh
tests/live/: test_live_smoke.py
tests/unit/: test_selectors_offline.py
